# TenniS

./: .gitignore  meson.build  meson_options.txt
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  seeta-tennis.cron.d.ex  seeta-tennis.doc-base.EX  shlibs.local.ex  watch.ex
include/api/: common.h  device.h  image_filter.h  intime.h  meson.build  module.h  operator.h  operator_gpu.h  program.h  setup.h  stream.h  tennis.h  tensor.h  tensorstack.h  workbench.h
include/api/cpp/: device.h  dtype.h  except.h  (+13 more)
include/backend/: common_function.h  common_structure.h  name.h
include/board/: board.h  dump.h  hook.h  profiler.h  time_log.h
include/compiler/: argparse.h  compiler.h  converter.h  translater.h  zipper.h
include/core/: controller.h  device.h  device_context.h  dtype.h  hard_memory.h  ieee754_float.h  memory.h  scan.h  sink.h  tensor.h  tensor_builder.h  tensor_iterator.h
include/encryption/: encrypted_fstream.h
include/engine/: context.h
include/frontend/: desc.h  frontend.h  intime.h  symbol.h
include/global/: device_admin.h  fp16_operator_factory.h  hard_allocator.h  hard_converter.h  memory_device.h  operator_factory.h  setup.h  shape_inferer_factory.h
include/memory/: flow.h
include/module/: bubble.h  graph.h  header.h  menu.h  module.h  node.h  serialization.h
include/runtime/: image_filter.h  importor.h  inferer.h  instruction.h  operator.h  program.h  runtime.h  stack.h  switcher.h  workbench.h
include/utils/: api.h  assert.h  box.h  cpu.h  cpu_info.h  ctxmgr.h  ctxmgr_lite.h  ctxmgr_lite_support.h  except.h  implement.h  log.h  mutex.h  need.h  otl.h  platform.h  random.h  static.h  void_bind.h
src/: meson.build
src/api/: common.cpp  declaration.h  declare_image_filter.h  declare_module.h  declare_operator.h  declare_program.h  declare_tensor.h  declare_workbench.h  errno.cpp  errno.h  image_filter.cpp  intime.cpp  meson.build  module.cpp  operator.cpp  operator_gpu.cpp  plugin.cpp  plugin.h  program.cpp  setup.cpp  tensor.cpp  workbench.cpp
src/backend/: meson.build  name.cpp
src/backend/base/: base_activation.cpp  base_add_bias.cpp  base_affine_sample2d.cpp  base_argmax.cpp  base_batch_norm.cpp  base_batch_scale.cpp  base_batchtospace4d.cpp  base_broadcast.cpp  base_broadcast_v2.cpp  base_cast.cpp  base_cast_v2.cpp  base_chunk.cpp  base_concat.cpp  base_conv2d.cpp  base_conv2d_quantized.cpp  base_conv2d_transpose.cpp  base_conv2d_v2.cpp  base_conv2d_winograd.cpp  base_depthwise_conv2d.cpp  base_depthwise_conv2d_v2.cpp  base_dimshuffle.cpp  base_flatten.cpp  base_force_color.cpp  base_force_gray.cpp  base_fused_batch_norm.cpp  base_gather.cpp  base_gatherv2.cpp  base_gemm.cpp  base_global_pooling2d.cpp  base_inner_prod.cpp  base_l2_norm.cpp  base_leaky_relu.cpp  base_max.cpp  base_new_shape.cpp  base_non_max_suppression_v3.cpp  base_norm_image.cpp  base_pad.cpp  base_pooling2d.cpp  base_pooling2d_v2.cpp  base_prelu.cpp  (+26 more)
src/board/: dump.cpp  meson.build  profiler.cpp
src/compiler/: argparse.cpp  compiler.cpp  meson.build  translater.cpp  zipper.cpp
src/core/: controller.cpp  device.cpp  device_context.cpp  hard_memory.cpp  memory.cpp  meson.build  scan.cpp  sink.cpp  tensor.cpp  tensor_builder.cpp
src/encryption/: aes.cpp  aes.h  aes_fstream.cpp  aes_fstream.h  encrypted_fstream.cpp  meson.build
src/engine/: meson.build
src/frontend/: desc.cpp  frontend.cpp  intime.cpp  meson.build  symbol.cpp
src/global/: device_admin.cpp  fp16_operator_factory.cpp  hard_allocator.cpp  hard_converter.cpp  memory_device.cpp  meson.build  operator_factory.cpp  setup.cpp  shape_inferer_factory.cpp
src/kernels/: meson.build
src/kernels/cpu/: abs.cpp  add.cpp  add_bias.cpp  affine_sample2d.cpp  argmax.cpp  batch_norm.cpp  batch_scale.cpp  batchtospace4d.cpp  broadcast.cpp  broadcast_v2.cpp  cast.cpp  chunk.cpp  concat.cpp  conv2d.cpp  conv2d_algorithm.cpp  conv2d_core.cpp  conv2d_v2.cpp  conv2d_winograd.cpp  conv2d_winograd_v2.cpp  cpu_gemm.cpp  dcn_v2_forward.cpp  depthwise_conv2d.cpp  depthwise_conv2d_algorithm.cpp  depthwise_conv2d_core.cpp  depthwise_conv2d_v2.cpp  detection_output.cpp  dims.cpp  dimshuffle.cpp  div.cpp  exp.cpp  expand.cpp  flatten.cpp  flatten2d.cpp  force_color.cpp  force_gray.cpp  fused_batch_norm.cpp  gather.cpp  gatherv2.cpp  global_pooling2d.cpp  im2col.cpp  (+62 more)
src/kernels/cpu/arm/: conv2d_3x3.cpp  conv2d_3x3_v2.cpp  conv2d_5x5.cpp  meson.build
src/kernels/cpu/caffe/: bbox_util.cpp  meson.build
src/kernels/cpu/dcn/: dcn_v2.h  dcn_v2_cpu.cpp  dcn_v2_im2col_cpu.cpp  dcn_v2_im2col_cpu.h  meson.build  utils.h
src/kernels/cpu/dragon/: bbox_utils.cpp  bbox_utils.h  meson.build  op_kernel.h  proposal_op.cpp  proposal_op.h  roi_align_op.cpp  roi_align_op.h  roi_align_op_kernel.cpp
src/kernels/cpu/quantized/: conv2d_quantized.cpp  conv2d_quantized_core.cpp  meson.build
src/kernels/gpu/: cuda_context.cpp  gpu_helper.cpp  inherit_cpu.cpp  math_cublas.cpp  memory_gpu.cpp  meson.build  proposal.cpp  roi_align.cpp
src/kernels/gpu/dcn/: dcn_v2.h  dcn_v2_im2col_cuda.h  meson.build  utils.h
src/kernels/gpu/dragon/: meson.build
src/memory/: flow.cpp  meson.build
src/module/: bubble.cpp  graph.cpp  header.cpp  menu.cpp  meson.build  module.cpp
src/runtime/: image_filter.cpp  importor.cpp  inferer.cpp  instruction.cpp  meson.build  operator.cpp  program.cpp  runtime.cpp  stack.cpp  switcher.cpp  workbench.cpp
src/utils/: box.cpp  cpu.cpp  cpu_info.cpp  ctxmgr_lite.cpp  except.cpp  log.cpp  meson.build  random.cpp
test/: board.cpp  compilation.cpp  controller.cpp  darknet.cpp  graph.cpp  graph_v2.cpp  kernel_cpu.cpp  log.cpp  mem.cpp  meson.build  mutex.cpp  openmp.cpp  operator.cpp  otl.cpp  parallel.cpp  serialization.cpp  sink.cpp  stack.cpp  stream.cpp  summary.cpp  sync_controller.cpp  tensor.cpp  tensor_builder.cpp  threadsafe.cpp  winograd.cpp
tools/: benchmark.cpp  double_test.cpp  draw_net.cpp  meson.build  run_test.cpp
tools/benchmark/: benchmark.h
(+305 files in other folders)
