executable(
  'test_board',
  'board.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_compilation',
  'compilation.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_controller',
  'controller.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_darknet',
  'darknet.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_graph_v2',
  'graph_v2.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_graph',
  'graph.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_kernel_cpu',
  'kernel_cpu.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_log',
  'log.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_mem',
  'mem.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_mutex',
  'mutex.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_openmp',
  'openmp.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_operator',
  'operator.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_otl',
  'otl.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_parallel',
  'parallel.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_serialization',
  'serialization.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_sink',
  'sink.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_stack',
  'stack.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_stream',
  'stream.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_summary',
  'summary.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_sync_controller',
  'sync_controller.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_tensor_builder',
  'tensor_builder.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_tensor',
  'tensor.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'test_threadsafe',
  'threadsafe.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_args: cpp_args
)

executable(
  'test_winograd',
  'winograd.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_args: cpp_args
)

