executable(
  'tool_benchmark',
  'benchmark.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'tool_double_test',
  'double_test.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'tool_draw_net',
  'draw_net.cpp',
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)

executable(
  'tool_run_test',
  'run_test.cpp'
  include_directories: include_directories('../include'),
  dependencies: tennis_deps,
  cpp_flags: cpp_flags
)
