sources += files(
  'base_activation.cpp',
  'base_add_bias.cpp',
  'base_affine_sample2d.cpp',
  'base_argmax.cpp',
  'base_batch_norm.cpp',
  'base_batch_scale.cpp',
  'base_batchtospace4d.cpp',
  'base_broadcast_v2.cpp',
  'base_broadcast.cpp',
  'base_cast_v2.cpp',
  'base_cast.cpp',
  'base_chunk.cpp',
  'base_concat.cpp',
  'base_conv2d_quantized.cpp',
  'base_conv2d_transpose.cpp',
  'base_conv2d_v2.cpp',
  'base_conv2d_winograd.cpp',
  'base_conv2d.cpp',
  'base_depthwise_conv2d_v2.cpp',
  'base_depthwise_conv2d.cpp',
  'base_dimshuffle.cpp',
  'base_flatten.cpp',
  'base_force_color.cpp',
  'base_force_gray.cpp',
  'base_fused_batch_norm.cpp',
  'base_gather.cpp',
  'base_gatherv2.cpp',
  'base_gemm.cpp',
  'base_global_pooling2d.cpp',
  'base_inner_prod.cpp',
  'base_l2_norm.cpp',
  'base_leaky_relu.cpp',
  'base_max.cpp',
  'base_new_shape.cpp',
  'base_non_max_suppression_v3.cpp',
  'base_norm_image.cpp',
  'base_pad.cpp',
  'base_pooling2d_v2.cpp',
  'base_pooling2d.cpp',
  'base_prelu.cpp',
  'base_prewhiten.cpp',
  'base_proposal.cpp',
  'base_quantize.cpp',
  'base_reduce_mean.cpp',
  'base_reduce_sum.cpp',
  'base_relu_max.cpp',
  'base_reshape_v2.cpp',
  'base_reshape.cpp',
  'base_resize2d.cpp',
  'base_roi_align.cpp',
  'base_shape_index_patch.cpp',
  'base_shape.cpp',
  'base_slice_v2.cpp',
  'base_slice_v3.cpp',
  'base_slice.cpp',
  'base_softmax.cpp',
  'base_spacetobatch4d.cpp',
  'base_stack_tensor.cpp',
  'base_strided_slice.cpp',
  'base_tile.cpp',
  'base_topkv2.cpp',
  'base_transpose.cpp',
  'base_unsqueeze.cpp',
  'base_winograd_transform_kernel.cpp',
  'element_wise_reduce.cpp'
)
