subdir('arm')
subdir('caffe')
subdir('dcn')
subdir('dragon')
subdir('quantized')

sources += files(
  'abs.cpp',
  'add_bias.cpp',
  'add.cpp',
  'affine_sample2d.cpp',
  'argmax.cpp',
  'batch_norm.cpp',
  'batch_scale.cpp',
  'batchtospace4d.cpp',
  'broadcast_v2.cpp',
  'broadcast.cpp',
  'cast.cpp',
  'chunk.cpp',
  'concat.cpp',
  'conv2d_algorithm.cpp',
  'conv2d_core.cpp',
  'conv2d_v2.cpp',
  'conv2d_winograd_v2.cpp',
  'conv2d_winograd.cpp',
  'conv2d.cpp',
  'cpu_gemm.cpp',
  'dcn_v2_forward.cpp',
  'depthwise_conv2d_algorithm.cpp',
  'depthwise_conv2d_core.cpp',
  'depthwise_conv2d_v2.cpp',
  'depthwise_conv2d.cpp',
  'detection_output.cpp',
  'dims.cpp',
  'dimshuffle.cpp',
  'div.cpp',
  'exp.cpp',
  'expand.cpp',
  'flatten.cpp',
  'flatten2d.cpp',
  'force_color.cpp',
  'force_gray.cpp',
  'fused_batch_norm.cpp',
  'gather.cpp',
  'gatherv2.cpp',
  'global_pooling2d.cpp',
  'im2col.cpp',
  'inner_prod.cpp',
  'l2_norm.cpp',
  'leaky_relu.cpp',
  'math_cpu.cpp',
  'max.cpp',
  'maximum.cpp',
  'memory_cpu.cpp',
  'mul.cpp',
  'non_max_suppression_v3.cpp',
  'norm_image.cpp',
  'pad_cpu.cpp',
  'pad.cpp',
  'pad2d_algorithm.cpp',
  'pooling_algorithm.cpp',
  'pooling2d_core.cpp',
  'pooling2d_v2.cpp',
  'pooling2d.cpp',
  'prelu.cpp',
  'prewhiten.cpp',
  'prior_box.cpp',
  'proposal.cpp',
  'quantize.cpp',
  'range.cpp',
  'reduce_mean.cpp',
  'reduce_sum.cpp',
  'relu_max.cpp',
  'relu.cpp',
  'reshape_v2.cpp',
  'reshape.cpp',
  'resize_nearest_neighbor.cpp',
  'resize2d.cpp',
  'roi_align.cpp',
  'rsqrt.cpp',
  'sample2d_v2.cpp',
  'sample2d.cpp',
  'shape_index_patch.cpp',
  'shape.cpp',
  'sigmoid.cpp',
  'slice_v2.cpp',
  'slice_v3.cpp',
  'slice.cpp',
  'softmax.cpp',
  'spacetobatch4d.cpp',
  'sqrt.cpp',
  'square.cpp',
  'squeeze.cpp',
  'stack_tensor.cpp',
  'strided_slice.cpp',
  'sub.cpp',
  'tanh.cpp',
  'tile.cpp',
  'to_float.cpp',
  'topkv2.cpp',
  'transpose_conv2d_core.cpp',
  'transpose_conv2d.cpp',
  'transpose.cpp',
  'unsqueeze.cpp',
  'winograd_algorithm.cpp',
  'winograd_transform_kernel.cpp',
  'yolo_poster.cpp',
  'yolo.cpp'
) 
