subdir('dcn')
subdir('dragon')

sources+= files(
  'abs.cu',
  'add_bias.cu',
  'add.cu',
  'affine_sample2d.cu',
  'argmax.cu',
  'batch_norm.cu',
  'batch_scale.cu',
  'batchtospace4d.cu',
  'broadcast_v2.cu',
  'broadcast.cu',
  'cast.cu',
  'concat.cu',
  'conv2d_core.cu',
  'conv2d.cu',
  'cuda_context.cpp',
  'dcn_v2_forward.cu',
  'depthwise_conv2d_core.cu',
  'depthwise_conv2d.cu',
  'dimshuffle.cu',
  'div.cu',
  'exp.cu',
  'force_color.cu',
  'force_gray.cu',
  'fused_batch_norm.cu',
  'gather.cu',
  'gatherv2.cu',
  'global_pooling2d.cu',
  'gpu_gemm.cu',
  'gpu_helper.cpp',
  'inherit_cpu.cpp',
  'inner_prod.cu',
  'l2_norm.cu',
  'leaky_relu.cu',
  'math_cublas.cpp',
  'math_gpu.cu',
  'max.cu',
  'maxinum.cu',
  'memory_gpu.cpp',
  'mul.cu',
  'norm_image.cu',
  'pad.cu',
  'pooling2d_core.cu',
  'pooling2d.cu',
  'prelu.cu',
  'prewhiten.cu',
  'proposal.cpp',
  'reduce_mean.cu',
  'reduce_sum.cu',
  'relu_max.cu',
  'relu.cu',
  'resize2d.cu',
  'roi_align.cpp',
  'rsqrt.cu',
  'sigmoid.cu',
  'slice_v2.cu',
  'slice_v3.cu',
  'slice.cu',
  'softmax.cu',
  'spacetobatch4d.cu',
  'sqrt.cu',
  'square.cu',
  'stack_tensor.cu',
  'strided_slice.cu',
  'sub.cu',
  'tanh.cu',
  'tile.cu',
  'to_float.cu',
  'topkv2.cu',
  'transpose_conv2d_core.cu',
  'transpose_conv2d.cu',
  'transpose.cu',
)
